add installation via docker

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     "localhost": "php -t ./public -S localhost:8080",
     "prepare": [
       "@migrations",
-      "@seed",
-      "@localhost"
+      "@seed"
     ]
   }
 }
